--- a/README.rdoc
+++ b/README.rdoc
@@ -5,24 +5,10 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version 2.1.1
 
-* System dependencies
+* Rails version 4.1.1
 
-* Configuration
+* Database creation PostgreSQL
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This app is developed to help the user decide if they can "cut the cord" and still enjoy their favorite shows using a variety of online services (ie: netflix, hulu, itunes).
